[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "channel-ten"
version = "0.9.1"
description = "Channel 10: Scrape VTES tournament winning decks from vekn.net and export to YAML"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "beautifulsoup4>=4.12",  # HTML parsing
    "httpx>=0.27",           # HTTP client (async-ready for future extension)
    "krcg>=5.0,<6.0",        # VTES card database
    "lxml>=5.0",             # Fast HTML parser backend for bs4
    "pydantic>=2.11",        # Data validation and models
    "python-dotenv>=1.2",    # Access to .env
    "ruamel.yaml>=0.18",     # YAML serialization (preserves formatting)
    "rich>=13.0",            # Pretty terminal output
]

[project.urls]
Homepage = "https://github.com/gurchon-hall/channel-ten"
Repository = "https://github.com/gurchon-hall/channel-ten.git"
Issues = "https://github.com/gurchon-hall/channel-ten/issues"
Changelog = "https://github.com/gurchon-hall/channel-ten/blob/main/CHANGELOG.rst"

[project.scripts]
channel-ten = "channel_ten.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-html>=4.1",
    "ruff>=0.4",
    "ty",
    "pre-commit>=3.7",
    "lxml-stubs",
    "types-PyYAML",
    "types-Pygments",
    "types-html5lib",
    "types-requests",
]

# ---------------------------------------------------------------------------
# Ruff (linter/formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
python-preference = "only-managed"

# ---------------------------------------------------------------------------
# ty
# ---------------------------------------------------------------------------
[tool.ty]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    # Configuration coverage par défaut (optionnel)
    "--cov=channel_ten",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests as API tests",
    "db: marks tests requiring database",
    "performance: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["channel_ten"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "channel_ten_*/*",
    "vtes_scraper*/**",
]

[tool.coverage.report]
precision = 2
# Afficher les lignes manquantes
show_missing = true
skip_empty = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",  # Ignorer les ellipsis
]

[tool.coverage.html]
directory = "reports/pytest"
